# bill_helper

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  conftest.py  pyproject.toml
.github/workflows/: docs-consistency.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_entities_and_entry_entity_refs.py  0003_entity_category.py  0004_users_and_account_entity_links.py  0005_remove_attachments.py  (+34 more)
backend/: README.md  __init__.py  __main__.py  auth.py  config.py  contracts_groups.py  contracts_settings.py  contracts_users.py  database.py  db_meta.py  enums.py  enums_agent.py  enums_finance.py  main.py  models.py  models_agent.py  models_files.py  models_finance.py  models_settings.py  models_shared.py  schemas.py  schemas_agent.py  schemas_auth.py  schemas_finance.py  schemas_settings.py  schemas_workspace.py
benchmark/: README.md  __init__.py  create_empty_snapshot.py  generate_ground_truth.py  io_utils.py  paths.py  runner.py  schemas.py  scorer.py  snapshot.py
docker/: agent-workspace-entrypoint.sh  agent-workspace-requirements.txt  agent-workspace.dockerfile
docs/: README.md  agent-billing-assistant.md  agent_billing_assistant.md  api.md  architecture.md  backend.md  backend_index.md  clean-architecture-standards.md  data-model.md  data_model.md  desloppify.md  development.md  documentation-system.md  documentation_system.md  feature-account-reconciliation.md  feature-dashboard-analytics.md  feature-entry-lifecycle.md  frontend.md  frontend_index.md  high-level-data-flow.md  high_level_data_flow.md  ios_index.md  llm_oriented_design.md  repository-structure.md  repository_structure.md  telegram_index.md
docs/api/: agent.md  (+6 more)
frontend/: README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
ios/: AGENTS.md  README.md
scripts/: bootstrap_admin.py  check_docs_sync.py  check_llm_design.py  demo_prompt_caching.py  dev_up.py  dev_up.sh  list_github_models.py  migrate_agent_upload_bundle_paths.py  render_agent_system_prompt_snapshot.py  run_e2e_backend.py  seed_defaults.py  seed_demo.py  setup_shared_env.sh
tasks/: 2026-03-09_agent_surface_followup.md  2026-03-09_backend_frontend_package_local_docs.md  2026-03-09_backend_frontend_remaining_work.md  2026-03-09_daily_expense_classification.md  2026-03-09_entity_table.md  2026-03-09_parallel_agent_thread.md  2026-03-11_dockerize.md  2026-03-11_interval_reconciliation.md  2026-03-11_ios_full_app.md  2026-03-12_entry_ai_tag_suggestion.md  2026-03-12_multi_user_security.md  2026_03_03-agent_workspace.md  2026_03_11-dockerize.md  2026_03_13-agent_cost_dashboard.md  2026_03_13-agent_workspace_db.md  2026_03_13-cli_unified_interface.md  2026_03_13-comprehensive_benchmarks.md  2026_03_13-docs_neceesity.md  2026_03_13-email_ingestion.md  2026_03_13-response_api_support.md  2026_03_13-tool_search_tool.md  2026_03_14-marker_pdf_parse.md  2026_03_16-brittle_cli_create.md  2026_03_16-dashboard_plot_improve.md  2026_03_16-groups_member_cli_followup.md  2026_03_20-agent_review_dependency_audit.md  telegram-ux-improvements.md
telegram/: README.md  __init__.py  _http.py  bill_helper_api.py  charts.py  commands.py  config.py  files.py  formatting.py  message_handler.py  polling.py  ptb.py  review_handler.py  state.py  stream_handler.py  webhook.py
(+727 files in other folders)
