[project]
name = "bill-helper"
version = "0.1.0"
description = "Local-first personal billing ledger with FastAPI and React"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "argon2-cffi>=25.1.0",
    "boto3>=1.42.63",
    "docling[easyocr]>=2.81.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "litellm>=1.76.2",
    "matplotlib>=3.10.1",
    "notebook>=7.5.3",
    "pydantic-settings>=2.7.1",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.20",
    "python-telegram-bot>=22.6",
    "sqlalchemy>=2.0.37",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
bill-helper-api = "backend.main:main"
bh = "backend.cli.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

# [tool.uv.sources]
# desloppify = { path = "../desloppify", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["backend", "telegram"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "workspace_docker: Docker-backed workspace lifecycle and proxy tests; exclude from the fast default backend suite",
]

[dependency-groups]
dev = [
    "desloppify[full]",
    "pytest>=8.3.4",
]
